--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,10 @@
         .info {
             margin-bottom: 10px;
         }
+        .info strong {
+            display: inline-block;
+            width: 150px;
+        }
     </style>
 </head>
 <body>
@@ -28,7 +32,7 @@
         <strong>User Info:</strong>
         <p id="ip-address">Loading...</p>
     </div>
-     <div class="infos">
+    <div class="info">
         <strong>Google Map:</strong>
         <p id="google-map">Loading...</p>
     </div>
@@ -36,30 +40,28 @@
         <strong>Date & Time:</strong>
         <p id="server-runtime">Loading...</p>
     </div>
-  <div class="info-server">
+    <div class="info">
         <strong>Running Time:</strong>
         <p id="server-run">Loading...</p>
-  </div>
+    </div>
     <script>
         // Fetch device information
         const userAgent = navigator.userAgent;
         const platform = navigator.platform;
-        const deviceInfo = `${userAgent} \n(${platform})`;
+        const deviceInfo = `${userAgent} (${platform})`;
         document.getElementById('device-info').innerText = deviceInfo;
 
-        // Fetch IP address
+        // Fetch IP address and location information
         fetch('https://api.ipify.org?format=json')
             .then(response => response.json())
             .then(data => {
-      fetch(`http://ip-api.com/json/${data.ip}?fields=66846719`)
-            .then(responses => responses.json())
-            .then(infoip => {
-              
-              const texted = `📡 Ip Address: ${data.ip}
+                fetch(`http://ip-api.com/json/${data.ip}?fields=66846719`)
+                    .then(response => response.json())
+                    .then(infoip => {
+                        const locationInfo = `📡 IP Address: ${data.ip}
 🌍 Location: ${infoip.city}, ${infoip.regionName}, ${infoip.country}
 🌐 Continent: ${infoip.continent}
 🏁 Country Code: ${infoip.countryCode}
-🌆 Region/State: ${infoip.regionName}
 🏙️ City: ${infoip.city}
 🌏 District: ${infoip.district}
 📮 ZIP code: ${infoip.zip}
@@ -67,43 +69,45 @@
 🌐 Longitude: ${infoip.lon}
 ⏰ Timezone: ${infoip.timezone}
 🏢 Organization: ${infoip.org}
-💰 Currency: ${infoip.currency}
-              `;
-              const textd =`Location Map:
-🗺️ [View on Map](https://www.google.com/maps?q=${infoip.lat},${infoip.lon}`
-                document.getElementById('ip-address').innerText = texted;
-                document.getElementById('google-map').innerText = textd;
-              })
+💰 Currency: ${infoip.currency}`;
+                        const mapLink = `Location Map:
+🗺️ <a href="https://www.google.com/maps?q=${infoip.lat},${infoip.lon}" target="_blank">View on Map</a>`;
+                        document.getElementById('ip-address').innerHTML = locationInfo;
+                        document.getElementById('google-map').innerHTML = mapLink;
+                    })
+                    .catch(error => {
+                        console.error('Error fetching IP address and location:', error);
+                        document.getElementById('ip-address').innerText = 'Error fetching IP address and location';
+                    });
             })
             .catch(error => {
                 console.error('Error fetching IP address:', error);
                 document.getElementById('ip-address').innerText = 'Error fetching IP address';
             });
 
-        // Fetch server runtime
+        // Display date and time
+        const currentTime = new Date().toLocaleString();
+        document.getElementById('server-runtime').innerText = currentTime;
+
+        // Fetch server running time
         fetch('/server-runtime')
             .then(response => response.text())
             .then(data => {
-                document.getElementById('server-runtime').innerText = data;
-            })
-            .catch(error => {
-                console.error('Error fetching server runtime:', error);
-                document.getElementById('server-runtime').innerText = 'Error fetching server runtime';
-            });
-      fetch('/dash')
-            .then(response => response.text())
-            .then(data => {
-          const hours = Math.floor(data / (60 * 60))
-  const minutes = Math.floor((data % (60 * 60)) / 60);
-  const seconds = Math.floor(data % 60);
-  const text = `${hours}/${minutes}/${seconds}`;
-   document.getElementById('server-run').innerText = text;
+                const serverRunTime = formatServerRunTime(data);
+                document.getElementById('server-run').innerText = serverRunTime;
             })
             .catch(error => {
                 console.error('Error fetching server runtime:', error);
                 document.getElementById('server-run').innerText = 'Error fetching server runtime';
             });
-            
+
+        // Function to format server running time
+        function formatServerRunTime(seconds) {
+            const hours = Math.floor(seconds / 3600);
+            const minutes = Math.floor((seconds % 3600) / 60);
+            const remainingSeconds = seconds % 60;
+            return `${hours}h ${minutes}m ${remainingSeconds}s`;
+        }
     </script>
 </body>
 </html>
