--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="monetag" content="42587087b6c1704d5b40839df82d8222">
+    <script src="https://alwingulla.com/88/tag.min.js" data-zone="66214" async data-cfasync="false"></script>
     <title>Boost React</title>
     <!-- Include a more visually appealing font -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
